@@ -6,6 +6,10 @@ listed as an author in one of the source files of this Isabelle distribution.
 Contributions to this Isabelle version
 --------------------------------------
 
+* January 2019: Andreas Lochbihler
+  New implementation for case_of_simps based on Code_Lazy's
+  pattern matching elimination algorithm.
+
 * October 2018: Mathias Fleury
   Proof reconstruction for the SMT solver veriT in the smt method
 
